#11 [feat] : 상세화면 버튼 정렬

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="blur_radius">10dp</dimen>
     <dimen name="grid_padding">1dp</dimen>
+    <dimen name="btn_horizontal_padding">8dp</dimen>
 </resources>
